--- a/th-time-lapse.html
+++ b/th-time-lapse.html
@@ -1,21 +1,15 @@
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../th-animated/th-animated.html">
-<link rel="import" href="../th-text/th-text.html">
+<link rel="import" href="../thelma-core/thelma_core.html">
+<link rel="import" href="th-text.html">
 
-<polymer-element name="th-time-lapse" extends="th-animated" attributes="timePeriod rate units altText frequency type numberSize width height">
+<polymer-element name="th-time-lapse" extends="th-animated" attributes="timePeriod rate units altText frequency textType numberSize width height">
 
   <template>
       <core-style ref="theme"></core-style>
 
       <!-- Inline styles are for Safari and mobile support --> 
-      <th-text markdown="false" type="{{type}}" width="{{width}}" height="{{height}}">
-        <span style="font-size: {{numberSize}}px;">{{currentCount}}</span> {{units}} 
-        <template if={{!altText}}>
-          in the past {{timePeriod}}.
-        </template>
-        <template if={{altText}}>
-          {{altText}}.
-        </template>
+      <th-text markdown="false" type="{{textType}}" width="{{width}}" height="{{height}}">
+        <span style="font-size: {{numberSize}}px;">{{currentCount}}</span> {{units}} {{textDetail}}
       </th-text>
   </template>
   
@@ -31,7 +25,7 @@
          * @type {String}   i.e. 5,000 (rate) births per second (frequency)
          * @options: second, minute, hour, day, week, month, year
          */
-        frequency: "minute", 
+        frequency: "second", 
         /**
          * [units description]
          * @type {String}
@@ -42,7 +36,7 @@
          * @type {String}   i.e. 5.3 million (rate) births have occured in the past day (timePeriod)
          * @options: minute, hour, day, week, month, year
          */
-        timePeriod: "day",
+        timePeriod: "minute",
         /**
          * textType refers to the category of th-text
          * @type {String}
@@ -67,6 +61,16 @@
             year: d.setMonth(0,1)
           }
 
+          var getTextDetail = {
+            minute: "in the last minute.",
+            hour: "in the past hour.",
+            day: "so far today.",
+            month: "so far this month.",
+            year: "so far this year."
+          };
+
+
+          self.textDetail = self.altText ? self.altText : getTextDetail[self.timePeriod];
           self.startTime = getStartTime[self.timePeriod];
           self.decimalPlaces = self.getDecimalPlaces(self.rate);
         },
@@ -118,7 +122,7 @@
             // obtain local UTC offset and convert to msec ???
             // var localOffset = d.getTimezoneOffset() * 60000;
             // var localOffset = 0;
-          }, 500)
+          }, 100)
           
         },
         /**
