undo accidental dependency change

--- a/th-time-lapse.html
+++ b/th-time-lapse.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../thelma-core/thelma_core.html">
-<link rel="import" href="th-text.html">
+<link rel="import" href="../th-animated/th-animated.html">
+<link rel="import" href="../th-text/th-text.html">
 
 <polymer-element name="th-time-lapse" extends="th-animated" attributes="timePeriod rate units altText frequency textType numberSize width height">
 
