--- a/th-time-lapse.html
+++ b/th-time-lapse.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../thelma-core/th-animated.html">
-<link rel="import" href="../thelma-text/th-text.html">
+<link rel="import" href="../th-animated/th-animated.html">
+<link rel="import" href="../th-text/th-text.html">
 
 <polymer-element name="th-time-lapse" extends="th-animated" attributes="timePeriod rate units altText frequency textType numberSize width height displayWholeNum">
 
@@ -19,7 +19,7 @@
          * 'rate' describes the number that occurs every frequency period
          * @type {Number}   i.e. 5,000 (rate) births per second (frequency)
          */
-        rate: 12130.2,
+        rate: 10.2,
         /**
          * 'frequency' refers to the period by which to the rate is measured
          * @type {String}   i.e. 5,000 (rate) births per second (frequency)
