added animateOnInit to designer metadata

--- a/metadata.html
+++ b/metadata.html
@@ -1,4 +1,4 @@
-<x-meta id="th-time-lapse" label="Thelma Time Lapse" group="Thelma numberic">			<template>			<th-time-lapse></th-time-lapse></template>
+<x-meta id="th-time-lapse" label="Thelma Time Lapse" group="Thelma numberic">			<template>			<th-time-lapse animateOnInit="true"/></template>
 			<template id="imports">			<link rel="import" href="th-time-lapse.html"/></template>
 			<property name="width" kind="number"/>
 			<property name="height" kind="number"/>
