--- a/th-time-lapse.html
+++ b/th-time-lapse.html
@@ -2,13 +2,13 @@
 <link rel="import" href="../th-animated/th-animated.html">
 <link rel="import" href="../th-text/th-text.html">
 
-<polymer-element name="th-time-lapse" extends="th-animated" attributes="timePeriod rate units altText frequency textType numberSize width height displayWholeNum">
+<polymer-element name="th-time-lapse" extends="th-animated" attributes="timePeriod rate units altText frequency textType numberSize width displayWholeNum">
 
   <template>
       <core-style ref="theme"></core-style>
 
       <!-- Inline styles are for Safari and mobile support --> 
-      <th-text markdown="false" type="{{textType}}" width="{{width}}" height="{{height}}">
+      <th-text markdown="false" type="{{textType}}" width="{{width}}">
         <span style="font-size: {{numberSize}}px;">{{currentCount | numberFilter}}</span> {{units}} {{textDetail}}
       </th-text>
   </template>
